tests/toylang/neg/001657_mutation.toylang
program a = { while a int sleep; } .
